// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "NUXT_I18N_MODULE_ID": "\\"@nuxtjs/i18n\\"",
  "importStrings": [
    "import locale__test_srcDir_en_json from \\"../en.json\\" assert { type: \\"json\\" };",
    "import locale__test_srcDir_ja_json from \\"../ja.json\\" assert { type: \\"json\\" };",
    "import locale__test_srcDir_fr_json from \\"../fr.json\\" assert { type: \\"json\\" };",
  ],
  "isSSG": false,
  "localeCodes": [
    "en",
    "ja",
    "fr",
  ],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => Promise.resolve(locale__test_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => Promise.resolve(locale__test_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => Promise.resolve(locale__test_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "nuxtI18nInternalOptions": {
    "__normalizedLocales": [
      {
        "code": "en",
      },
    ],
  },
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "locales": [],
  },
  "nuxtI18nOptionsDefault": {
    "baseUrl": "",
    "bundle": {
      "compositionOnly": true,
      "dropMessageCompiler": false,
      "fullInstall": true,
      "runtimeOnly": false,
    },
    "compilation": {
      "escapeHtml": false,
      "jit": true,
      "strictMessage": true,
    },
    "customBlocks": {
      "defaultSFCLang": "json",
      "globalSFCScope": false,
    },
    "customRoutes": "page",
    "debug": false,
    "defaultDirection": "ltr",
    "defaultLocale": "",
    "defaultLocaleRouteNameSuffix": "default",
    "detectBrowserLanguage": {
      "alwaysRedirect": false,
      "cookieCrossOrigin": false,
      "cookieDomain": null,
      "cookieKey": "i18n_redirected",
      "cookieSecure": false,
      "fallbackLocale": "",
      "redirectOn": "root",
      "useCookie": true,
    },
    "differentDomains": false,
    "dynamicRouteParams": false,
    "experimental": {
      "jsTsFormatResource": false,
    },
    "langDir": null,
    "lazy": false,
    "locales": [],
    "pages": {},
    "parallelPlugin": false,
    "rootRedirect": null,
    "routesNameSeparator": "___",
    "skipSettingLocaleOnNavigate": false,
    "strategy": "prefix_except_default",
    "trailingSlash": false,
    "types": "composition",
    "vueI18n": "",
  },
  "parallelPlugin": false,
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: i18n_config_ts_00000000 */)",
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "NUXT_I18N_MODULE_ID": "\\"@nuxtjs/i18n\\"",
  "importStrings": [],
  "isSSG": false,
  "localeCodes": [
    "en",
    "ja",
    "fr",
    "es",
    "es-AR",
  ],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => import(\\"../en.json\\" /* webpackChunkName: \\"locale__test_srcDir_en_json\\" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => import(\\"../ja.json\\" /* webpackChunkName: \\"locale__test_srcDir_ja_json\\" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => import(\\"../fr.json\\" /* webpackChunkName: \\"locale__test_srcDir_fr_json\\" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "false",
          "key": "\\"../es.json\\"",
          "load": "() => import(\\"../es.json\\" /* webpackChunkName: \\"locale__test_srcDir_es_json\\" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "false",
          "key": "\\"../es.json\\"",
          "load": "() => import(\\"../es.json\\" /* webpackChunkName: \\"locale__test_srcDir_es_json\\" */)",
        },
        {
          "cache": "true",
          "key": "\\"../es-AR.json\\"",
          "load": "() => import(\\"../es-AR.json\\" /* webpackChunkName: \\"locale__test_srcDir_es_AR_json\\" */)",
        },
      ],
    ],
  ],
  "nuxtI18nInternalOptions": {
    "__normalizedLocales": [
      {
        "code": "en",
      },
    ],
  },
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "locales": [],
  },
  "nuxtI18nOptionsDefault": {},
  "parallelPlugin": false,
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: i18n_config_ts_00000000 */)",
  ],
}
`;

exports[`lazy 1`] = `
{
  "NUXT_I18N_MODULE_ID": "\\"@nuxtjs/i18n\\"",
  "importStrings": [],
  "isSSG": false,
  "localeCodes": [
    "en",
    "ja",
    "fr",
  ],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => import(\\"../en.json\\" /* webpackChunkName: \\"locale__test_srcDir_en_json\\" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => import(\\"../ja.json\\" /* webpackChunkName: \\"locale__test_srcDir_ja_json\\" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => import(\\"../fr.json\\" /* webpackChunkName: \\"locale__test_srcDir_fr_json\\" */)",
        },
      ],
    ],
  ],
  "nuxtI18nInternalOptions": {
    "__normalizedLocales": [
      {
        "code": "en",
      },
    ],
  },
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "locales": [],
  },
  "nuxtI18nOptionsDefault": {},
  "parallelPlugin": false,
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: i18n_config_ts_00000000 */)",
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "NUXT_I18N_MODULE_ID": "\\"@nuxtjs/i18n\\"",
  "importStrings": [],
  "isSSG": false,
  "localeCodes": [
    "en",
    "ja",
    "fr",
  ],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en/main.json\\"",
          "load": "() => import(\\"../en/main.json\\" /* webpackChunkName: \\"locale__test_srcDir_en_main_json\\" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja/main.json\\"",
          "load": "() => import(\\"../ja/main.json\\" /* webpackChunkName: \\"locale__test_srcDir_ja_main_json\\" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr/main.json\\"",
          "load": "() => import(\\"../fr/main.json\\" /* webpackChunkName: \\"locale__test_srcDir_fr_main_json\\" */)",
        },
      ],
    ],
  ],
  "nuxtI18nInternalOptions": {
    "__normalizedLocales": [
      {
        "code": "en",
      },
    ],
  },
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "locales": [],
  },
  "nuxtI18nOptionsDefault": {},
  "parallelPlugin": false,
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: i18n_config_ts_00000000 */)",
  ],
}
`;

exports[`multiple files 1`] = `
{
  "NUXT_I18N_MODULE_ID": "\\"@nuxtjs/i18n\\"",
  "importStrings": [],
  "isSSG": false,
  "localeCodes": [
    "en",
    "ja",
    "fr",
    "es",
    "es-AR",
  ],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => import(\\"../en.json\\" /* webpackChunkName: \\"locale__test_srcDir_en_json\\" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => import(\\"../ja.json\\" /* webpackChunkName: \\"locale__test_srcDir_ja_json\\" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => import(\\"../fr.json\\" /* webpackChunkName: \\"locale__test_srcDir_fr_json\\" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "true",
          "key": "\\"../es.json\\"",
          "load": "() => import(\\"../es.json\\" /* webpackChunkName: \\"locale__test_srcDir_es_json\\" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "true",
          "key": "\\"../es.json\\"",
          "load": "() => import(\\"../es.json\\" /* webpackChunkName: \\"locale__test_srcDir_es_json\\" */)",
        },
        {
          "cache": "true",
          "key": "\\"../es-AR.json\\"",
          "load": "() => import(\\"../es-AR.json\\" /* webpackChunkName: \\"locale__test_srcDir_es_AR_json\\" */)",
        },
      ],
    ],
  ],
  "nuxtI18nInternalOptions": {
    "__normalizedLocales": [
      {
        "code": "en",
      },
    ],
  },
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "locales": [],
  },
  "nuxtI18nOptionsDefault": {},
  "parallelPlugin": false,
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: i18n_config_ts_00000000 */)",
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "NUXT_I18N_MODULE_ID": "\\"@nuxtjs/i18n\\"",
  "importStrings": [],
  "isSSG": false,
  "localeCodes": [
    "en",
    "ja",
    "fr",
  ],
  "localeMessages": [],
  "nuxtI18nInternalOptions": {
    "__normalizedLocales": [
      {
        "code": "en",
      },
    ],
  },
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "paths": [
          "/path/to/en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "paths": [
          "/path/to/ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "paths": [
          "/path/to/fr.json",
        ],
        "testFunc": [Function],
      },
    ],
  },
  "nuxtI18nOptionsDefault": {
    "baseUrl": "",
    "bundle": {
      "compositionOnly": true,
      "dropMessageCompiler": false,
      "fullInstall": true,
      "runtimeOnly": false,
    },
    "compilation": {
      "escapeHtml": false,
      "jit": true,
      "strictMessage": true,
    },
    "customBlocks": {
      "defaultSFCLang": "json",
      "globalSFCScope": false,
    },
    "customRoutes": "page",
    "debug": false,
    "defaultDirection": "ltr",
    "defaultLocale": "",
    "defaultLocaleRouteNameSuffix": "default",
    "detectBrowserLanguage": {
      "alwaysRedirect": false,
      "cookieCrossOrigin": false,
      "cookieDomain": null,
      "cookieKey": "i18n_redirected",
      "cookieSecure": false,
      "fallbackLocale": "",
      "redirectOn": "root",
      "useCookie": true,
    },
    "differentDomains": false,
    "dynamicRouteParams": false,
    "experimental": {
      "jsTsFormatResource": false,
    },
    "langDir": null,
    "lazy": false,
    "locales": [],
    "pages": {},
    "parallelPlugin": false,
    "rootRedirect": null,
    "routesNameSeparator": "___",
    "skipSettingLocaleOnNavigate": false,
    "strategy": "prefix_except_default",
    "trailingSlash": false,
    "types": "composition",
    "vueI18n": "",
  },
  "parallelPlugin": false,
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: i18n_config_ts_00000000 */)",
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "NUXT_I18N_MODULE_ID": "\\"@nuxtjs/i18n\\"",
  "importStrings": [],
  "isSSG": false,
  "localeCodes": [
    "en",
    "ja",
    "fr",
  ],
  "localeMessages": [],
  "nuxtI18nInternalOptions": {
    "__normalizedLocales": [
      {
        "code": "en",
      },
    ],
  },
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "paths": [
          "/path/to/en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "paths": [
          "/path/to/ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "paths": [
          "/path/to/fr.json",
        ],
        "testFunc": [Function],
      },
    ],
  },
  "nuxtI18nOptionsDefault": {
    "baseUrl": "",
    "bundle": {
      "compositionOnly": true,
      "dropMessageCompiler": false,
      "fullInstall": true,
      "runtimeOnly": false,
    },
    "compilation": {
      "escapeHtml": false,
      "jit": true,
      "strictMessage": true,
    },
    "customBlocks": {
      "defaultSFCLang": "json",
      "globalSFCScope": false,
    },
    "customRoutes": "page",
    "debug": false,
    "defaultDirection": "ltr",
    "defaultLocale": "",
    "defaultLocaleRouteNameSuffix": "default",
    "detectBrowserLanguage": {
      "alwaysRedirect": false,
      "cookieCrossOrigin": false,
      "cookieDomain": null,
      "cookieKey": "i18n_redirected",
      "cookieSecure": false,
      "fallbackLocale": "",
      "redirectOn": "root",
      "useCookie": true,
    },
    "differentDomains": false,
    "dynamicRouteParams": false,
    "experimental": {
      "jsTsFormatResource": false,
    },
    "langDir": null,
    "lazy": false,
    "locales": [],
    "pages": {},
    "parallelPlugin": false,
    "rootRedirect": null,
    "routesNameSeparator": "___",
    "skipSettingLocaleOnNavigate": false,
    "strategy": "prefix_except_default",
    "trailingSlash": false,
    "types": "composition",
    "vueI18n": "",
  },
  "parallelPlugin": false,
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: i18n_config_ts_00000000 */)",
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "NUXT_I18N_MODULE_ID": "\\"@nuxtjs/i18n\\"",
  "importStrings": [
    "import locale__test_srcDir_en_json from \\"../en.json\\" assert { type: \\"json\\" };",
    "import locale__test_srcDir_ja_json from \\"../ja.json\\" assert { type: \\"json\\" };",
    "import locale__test_srcDir_fr_json from \\"../fr.json\\" assert { type: \\"json\\" };",
  ],
  "isSSG": false,
  "localeCodes": [
    "en",
    "ja",
    "fr",
  ],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => Promise.resolve(locale__test_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => Promise.resolve(locale__test_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => Promise.resolve(locale__test_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "nuxtI18nInternalOptions": {
    "__normalizedLocales": [
      {
        "code": "en",
      },
    ],
  },
  "nuxtI18nOptions": {
    "locales": [],
  },
  "nuxtI18nOptionsDefault": {},
  "parallelPlugin": false,
  "vueI18nConfigs": [
    "() => import(\\"../foo/layer2/vue-i18n.options.js?hash=475488e5&config=1\\" /* webpackChunkName: vue_i18n_options_js_00000000 */)",
    "() => import(\\"../layer1/i18n.custom.ts?hash=0ca697e2&config=1\\" /* webpackChunkName: i18n_custom_ts_00000000 */)",
    "() => import(\\"../to/i18n.config.ts?hash=fb1304e8&config=1\\" /* webpackChunkName: i18n_config_ts_00000000 */)",
  ],
}
`;
